# JavaCodeCourses

./: .gitignore  pyproject.toml
src/Cours_1/module_1/singleton/: method_import.py
src/Cours_1/module_1/сlass_attributes/: metaclass.py
src/Cours_1/module_3/task_1/: async_http.py
src/Cours_1/module_3/task_2/: parallel_processing.py  results.json
src/Cours_1/module_3/task_3/: async_http.py
src/Cours_2/drf/task1/: manage.py
src/Cours_2/drf/task1/authenticationjwt/: apps.py  models.py  serializers.py  urls.py  views.py
src/Cours_2/drf/task1/jwtproject/: asgi.py  settings.py  urls.py  wsgi.py
src/Cours_2/drf/task2/bookstore/: settings.py
src/Cours_2/drf/task2/shop/: models.py  serializers.py  urls.py  viewsets.py
src/Cours_2/drf/task2/shop/migrations/: 0001_initial.py
src/Cours_2/module_1/task_1/: db.py  task_1.py
src/Cours_2/module_1/task_2/: task_2.py
src/Cours_2/module_1/task_3/: task_3.py
src/Cours_2/module_1/task_4/: task_4.py
src/module_1/decorator/: caching.py
src/module_1/singleton/: logger.py  metaclass.py  method_new.py
src/module_2/: search_item.py
src/module_3/task_1/: async_http.py  results.json
src/module_3/task_2/: parallel_processing.py  results.json
src/module_3/task_3/: async_http.py  urls.txt
src/module_6/: asgi.py
